# Pweave

./: .conda_ci_before_install.sh  .conda_ci_install.sh  .coveragerc  .gitattributes  .gitignore  .hgtags  .travis.yml  CHANGELOG.txt  LICENSE.txt  MANIFEST.in  README-ES.rst  README.rst  README.txt  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  spintest.py  test.py  test2.py  testString.py
doc/: Makefile  Readme.md
examples/: AR_yw.mdw  FIR_design.py  FIR_design_minted.texw  FIR_design_verb.texw  Makefile  fir_design.texw  index.rstw  julia_sample.mdw  linear_regression.py  octave_sample.mdw  pygments.sty  regression_whiteside.py  run-examples.rstw
pweave/: __init__.py  config.py  formatters.py  markdownmath.py  mimetypes.py  processors.py  pweave.pyproj  pweb.py  readers.py  scripts.py  subsnippets.py  templates.py
scripts/: Pweave.py
tests/: _frameworkForTests.py  _frameworkForTests_2.py  _frameworkForTests_3.py  _frameworkForTests_Python2.py  _frameworkForTests_common.py  ar_yw.md  convert_test_ref.Pnw  inline_chunks.md  inline_chunks.mdw  inline_chunks_ref.md  ipy_processor_test.mdw  markdown_reader.mdw  markdown_reader.txt  markdown_reader_ref.md  octave_test.mdw  octave_test_ref.md  processor_cache_ref.md  processor_default_ref.md  processor_test.mdw  processor_test.txt  processor_test_ref.md  publish_test.html  simple.md  simple.mdw  simple_REF.md  term_test.texw  term_test_ref.tex  testPwebProcessor.py  test_cache.py  test_formatters.py  test_ipynb.py  test_nondeterministicFail.py  test_nondeterministicFail.sh  test_octave.py  (+6 more)
(+123 files in other folders)
