[tool.poetry]
name = "dilawar-pweave"
version = "0.1.0"
description = ""
authors = ["Dilawar Singh <dilawar@subcom.tech>"]
readme = "README.md"

[tool.poetry.scripts]
pweave = 'pweave.scripts:weave'
ptangle = 'pweave.scripts:tangle'
pypublish = 'pweave.scripts:publish'
pweave-convert = 'pweave.scripts:convert'

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
markdown = "^3.5.1"
pygments = "^2.16.1"
ipython = "^8.17.2"
nbformat = "^5.9.2"
nbconvert = "^7.10.0"
jupyter-client = "^8.5.0"


[tool.poetry.group.dev.dependencies]
scipy = "^1.11.3"
matplotlib = "^3.8.1"
coverage = "^7.3.2"
ipython = "^8.17.2"
nose = "^1.3.7"
notebook = "^7.0.6"
black = "^23.10.1"
mypy = "^1.6.1"


[tool.poetry.group.doc.dependencies]
scipy = "^1.11.3"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
